--- a/doctors/member1.html
+++ b/doctors/member1.html
@@ -1,5 +1,5 @@
 <div class="cbp-l-member-img">
-	<img src="personal/maria.jpg" alt="">
+	<img src="img/personal/maria.jpg" alt="">
 </div>
 <div class="cbp-l-member-info">
 	<div class="cbp-l-member-name">María José Sáenz Martínez</div>
