--- a/doctors/member2.html
+++ b/doctors/member2.html
@@ -1,5 +1,5 @@
 <div class="cbp-l-member-img">
-	<img src="personal/Sofia.jpg" alt="">
+	<img src="img/personal/Sofia.jpg" alt="">
 </div>
 <div class="cbp-l-member-info">
 	<div class="cbp-l-member-name">Sofía Cabalceta</div>
